# ulauncher-vscode-lookup

./: .gitignore  Makefile  README.md  main.py  manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
tests/: conftest.py  test_recents.py
